# PaperLibrary

./: .clang-tidy  CMakeLists.txt  LICENSE  PaperLibraryConfigureChecks.cmake  README.md  config-paperlibrary.h.cmake  paperlibrary.categories
autotests/: CMakeLists.txt  chromestriptest.cpp  covergeneratortest.cpp  coverheuristictest.cpp  epubcovertest.cpp  epubimportertest.cpp  epubreadercorpustest.cpp  epubwebreadertest.cpp  libraryautotaggertest.cpp  librarystoretest.cpp  libraryviewtest.cpp  paperlibrarymodeltest.cpp  pdfviewlifecycletest.cpp  readingprogresstest.cpp  shelltest.cpp  telemetrytest.cpp
docs/: public-release-audit.md  public-release-checklist.md  public-release-rules.md  todd-testing.md
docs/contracts/: focus-manifest-v1.md
scripts/dev/: CraftBootstrap.py  coherence.py  fetch-public-domain-starter.sh  fetch_public_domain_starter.py  library_morning_check.py  library_morning_check_test.py  rebuild-toolchain.sh  run-paperlibrary.sh
shell/: CMakeLists.txt  MacOSXBundleInfo.plist.in  applebooksprogress.cpp  applebooksprogress.h  chromecolors.h  chrometabbar.cpp  chrometabbar.h  chrometabwidget.cpp  chrometabwidget.h  chrometoolbar.cpp  chrometoolbar.h  claudeprocesshelper.cpp  claudeprocesshelper.h  covergenerator.cpp  covergenerator.h  coverheuristic.cpp  coverheuristic.h  epubcover.cpp  epubcover.h  epubimporter.cpp  epubimporter.h  epubreader.css  epubreader.js  epubwebreader.cpp  epubwebreader.h  io.github.todd866.paperlibrary.appdata.xml  io.github.todd866.paperlibrary.desktop  libraryautotagger.cpp  libraryautotagger.h  librarystore.cpp  librarystore.h  libraryview.cpp  libraryview.h  macosscrolldebug.h  macosscrolldebug.mm  macostitlebar.h  macostitlebar.mm  main.cpp  paperlibrary_main.cpp  paperlibrary_main.h  (+14 more)
shell/icons/: Coherence.icns  PaperLibrary.icns
starter-pack/public-domain/: README.md  manifest.json
